# lzipper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/lzipper-cli/: Cargo.toml
examples/lzipper-cli/src/: main.rs
src/: decoder.rs  encoder.rs  error.rs  lib.rs
tests/: invalid.rs  roundtrip.rs
